Updates for Ivy build.
git-svn-id: https://lexevs.svn.sourceforge.net/svnroot/lexevs/base/v6/trunk/lexevs_api@8521 c4b421de-a31f-834e-8902-8020e42e311c