@@ -1,191 +1,26 @@
-<project name="lbGUI" default="all" basedir=".">
-	<description>
-		Buildfile for lbGUI
-	</description>
+<?xml version="1.0" encoding="UTF-8"?>
 
-	<!-- set global properties for this build -->
-	<property name="src.dir" location="src" />
-	<property name="antBuild.dir" location="antBuild" />
-	<property name="classes.dir" location="${antBuild.dir}/classes" />
-	<property name="dist.dir" location="${antBuild.dir}/dist" />
-	<property name="webstart.dir" location="${dist.dir}/webstart"/>
-	<property name="extLib.dir" location="${basedir}/../lgSharedLibraries" />
-	<property name="lbRuntime.dir" location="lbRuntime" />
+<!-- ====================================================================== -->
+<!-- Ant build file (http://ant.apache.org/) for Ant 1.6.2 or above.        -->
+<!-- ====================================================================== -->
 
-	<!--Sets up the classpaths correctly, not meant to be called directly-->
-	<target name="init">
-		<echo>Constructing classpath</echo>
-		<path id="classpath">
-			<fileset dir="${extLib.dir}/eclipse/swt" id="libs">
-				<include name="**/*.jar" />
-				<exclude name="**/swt.jar" />
-			</fileset>
-			<fileset dir="${extLib.dir}/prefuse" id="prefuse">
-						<include name="*.jar" />
-					</fileset>
-			<!--at compile time, the windows swt.jar should be fine on all platforms-->
-			<fileset dir="${extLib.dir}/eclipse/swt/windows/" id="swt-lib">
-				<include name="swt.jar" />
-			</fileset>
-			<fileset dir="${lbRuntime.dir}" id="lbRuntime">
-				<include name="**/*.jar" />
-			</fileset>
-			<fileset dir="${extLib.dir}/sqlDrivers" id="sqlDrivers">
-				<include name="*.jar"/>
-			</fileset>
-		</path>
-		
-		<taskdef name="izPack" classname="com.izforge.izpack.ant.IzPackTask">
-			<classpath path="../lgSharedLibraries/izPack/standalone-compiler-3.8.1.jar"/>
-		</taskdef>
-		<available file="keystore" type="file" property="keystore.exists" />
-	</target>
+<!-- ====================================================================== -->
+<!-- ===================== - DO NOT EDIT THIS FILE! - ===================== -->
+<!-- ====================================================================== -->
+<!--                                                                        -->
+<!-- Any modifications will be overwritten.                                 -->
+<!--                                                                        -->
+<!-- Generated by Maven Ant Plugin on 8/31/09 1:56 PM                        -->
+<!-- See: http://maven.apache.org/plugins/maven-ant-plugin/                 -->
+<!--                                                                        -->
+<!-- ====================================================================== -->
 
-	<target name="cleanAll" depends="init" description="clean up">
-		<!-- Delete the ${build.dir} and ${dist.dir} directory trees -->
-		<delete dir="${antBuild.dir}" />
-	</target>
+<project name="lexbig-gui" default="publish" xmlns:ivy="antlib:org.apache.ivy.ant" basedir=".">
 
-	<target name="clean" depends="init" description="clean up">
-		<!-- Clean up after the build so we just have the installer. -->
-		<delete dir="${classes.dir}" />
-		<delete dir="${dist.dir}/linux"/>
-		<delete dir="${dist.dir}/linux_x86_64"/>
-		<delete dir="${dist.dir}/windows"/>
-		<delete dir="${dist.dir}/OSX"/>
-		<delete>
-			<fileset dir="${dist.dir}">
-				<include name="*.bat"/>
-				<include name="*.sh"/>
-				<include name="*.command"/>
-				<include name="lbGUI.jar"/>
-			</fileset>
-		</delete>
-	</target>
+  <!-- ====================================================================== -->
+  <!-- Build environment properties                                           -->
+  <!-- ====================================================================== -->
+  <property file="build.properties"/>
+  <import file="${basedir}/../lbPackager/common-build.xml"/>
 
-	<target name="compile" depends="init" description="compile the source ">
-		<mkdir dir="${classes.dir}" />
-
-		<copy todir="${classes.dir}/">
-			<fileset dir="${src.dir}">
-				<include name="**/*.gif" />
-			</fileset>
-		</copy>
-		<!-- Compile the java code from ${src.dir} into ${classes.dir} -->
-		<javac target="1.5" source="1.5" debug="true" srcdir="${src.dir}" destdir="${classes.dir}">
-			<classpath refid="classpath" />
-		</javac>
-	</target>
-
-	<target name="jar" depends="compile" description="generate the jar file">
-		<!-- Create the distribution directory -->
-		<mkdir dir="${dist.dir}" />
-		<!-- Put everything in ${classes} into .jar file -->
-		<jar jarfile="${dist.dir}/lbGUI.jar" basedir="${classes.dir}" duplicate="preserve">
-			<manifest>
-				<attribute name="Main-Class" value="org.LexGrid.LexBIG.gui.LB_GUI" />
-			</manifest>
-			<zipgroupfileset refid="libs" />
-			<zipgroupfileset refid="prefuse" />
-		</jar>
-	</target>
-
-	<target name="prepare-package" depends="jar" description="Prepare distribution for each platform" >
-		<mkdir dir="${dist.dir}/windows" />
-		<copy todir="${dist.dir}/windows/">
-			<fileset dir="${extLib.dir}/eclipse/swt/windows/">
-				<include name="**/*.dll"/>
-				<include name="**/*.jar"/>
-			</fileset>
-  		</copy>
-		<echo file="${dist.dir}/Windows-lbGUI.bat">
-java -Xmx1000M -XX:MaxPermSize=256M -Djava.library.path=windows/ -cp lbGUI.jar;windows/swt.jar;../runtime/lbPatch.jar;../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_GUI
-pause
-		</echo>
-		
-		<mkdir dir="${dist.dir}/linux" />
-		<copy todir="${dist.dir}/linux/">
-			<fileset dir="${extLib.dir}/eclipse/swt/linux/">
-				<include name="**/*.so*"/>
-				<include name="**/*.jar"/>
-			</fileset>
-  		</copy>
-		
-		<echo file="${dist.dir}/Linux-lbGUI.sh">
-java -Xmx1000M -XX:MaxPermSize=256M -Djava.library.path=linux/ -cp lbGUI.jar:linux/swt.jar:../runtime/lbPatch.jar:../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_GUI
-		</echo>
-	
-		<mkdir dir="${dist.dir}/OSX" />
-		<copy todir="${dist.dir}/OSX/">
-			<fileset dir="${extLib.dir}/eclipse/swt/OSX/">
-				<include name="**/*"/>
-				<exclude name="**/*.html"/>
-			</fileset>
-  		</copy>
-		
-		<echo file="${dist.dir}/OSX-lbGUI.command">
-java -Xmx1000M -XX:MaxPermSize=256M -Djava.library.path=OSX/ -cp lbGUI.jar;OSX/swt.jar;../runtime/lbPatch.jar;../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_GUI
-		</echo>
-		
-		<mkdir dir="${dist.dir}/linux_x86_64" />
-		<copy todir="${dist.dir}/linux_x86_64/">
-			<fileset dir="${extLib.dir}/eclipse/swt/linux_x86_64/">
-				<include name="**/*.so*"/>
-				<include name="**/*.jar"/>
-			</fileset>
-  		</copy>
-		
-		<echo file="${dist.dir}/Linux_64-lbGUI.sh">
-java -Xmx6000M -XX:MaxPermSize=256M -Djava.library.path=linux_x86_64/ -cp lbGUI.jar:linux_x86_64/swt.jar:../runtime/lbPatch.jar:../runtime/lbRuntime.jar org.LexGrid.LexBIG.gui.LB_GUI
-		</echo>
-		
-		<fixcrlf srcdir="${dist.dir}/" eol="lf" includes="*.command" />
-		<fixcrlf srcdir="${dist.dir}/" eol="crlf" includes="*.bat" />
-		<fixcrlf srcdir="${dist.dir}/" eol="lf" includes="*.sh" />
-	</target>
-	
-	<target name="izpack" depends="prepare-package" description="Package up with IZPack for install" >
-		<!-- Create the izPack config file; alter to match version -->
-		<replace file="izpack-install.xml" token="@@REPLACED_BY_BUILD_APPNAME@@" value="${prodTitle}"/>
-		<replace file="izpack-install.xml" token="@@REPLACED_BY_BUILD_APPSUBPATH@@" value="LexGrid/${prodID}/${vBuild}"/>
-		<replace file="izpack-install.xml" token="@@REPLACED_BY_BUILD_APPVERSION@@" value="${vBuild}"/>
-		<replace file="izpack-install.xml" token="@@REPLACED_BY_BUILD_INFO_URL@@"
-			value="http://informatics.mayo.edu/LexGrid/index.php?page=${prodID}"/>
-		
-		<!-- Create the izPack installer -->
-		<izPack input="izpack-install.xml"
-			output="${dist.dir}/lbGUI_Installer"
-			installerType="standard" basedir="${basedir}"/>
-
-	</target>
-	
-	<target name="webstart" depends="compile" if="keystore.exists">
-		<mkdir dir="${webstart.dir}" />
-		
-		<copy file="${dist.dir}/lbGUI.jar" todir="${webstart.dir}"/>
-		
-		<jar jarfile="${webstart.dir}/lbRuntime.jar" duplicate="preserve">
-			<zipgroupfileset  refid="lbRuntime"/>
-		</jar>
-
-		<copy tofile="${webstart.dir}/swt-windows.jar" file="${extLib.dir}/eclipse/swt/windows/swt.jar" />
-		<copy tofile="${webstart.dir}/swt-linux.jar" file="${extLib.dir}/eclipse/swt/linux/swt.jar" />
-		<copy tofile="${webstart.dir}/swt-linux_x86_64.jar" file="${extLib.dir}/eclipse/swt/linux_x86_64/swt.jar" />
-		<copy tofile="${webstart.dir}/swt-OSX.jar" file="${extLib.dir}/eclipse/swt/OSX/swt.jar" />
-		<jar jarfile="${webstart.dir}/swt-windowsNatives.jar" basedir="${extLib.dir}/eclipse/swt/windows/" includes="*.dll" />
-		<jar jarfile="${webstart.dir}/swt-linuxNatives.jar" basedir="${extLib.dir}/eclipse/swt/linux/" includes="*.so*" />
-		<jar jarfile="${webstart.dir}/swt-linuxNatives_x86_64.jar" basedir="${extLib.dir}/eclipse/swt/linux_x86_64/" includes="*.so*" />
-		<jar jarfile="${webstart.dir}/swt-OSXNatives.jar" basedir="${extLib.dir}/eclipse/swt/OSX/" excludes="*.html" />
-
-		<signjar alias="keystore" keystore="keystore" storepass="keystore">
-			<fileset dir="${webstart.dir}">
-				<include name="**/*.jar" />
-			</fileset>
-		</signjar>
-
-		<copy file="resources/lbGUI.jnlp" todir="${webstart.dir}" />
-		<copy file="${src.dir}/icons/icon.gif" todir="${webstart.dir}" />
-	</target>
-
-	<target name="all" depends="init, cleanAll, compile, jar, prepare-package, izpack, webstart, clean" description="do everything for an external build" />
 </project>
